[package]
name = "turtle-wrangler"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "turtle-sender-queue",
    "turtle-tcp",
    "performance-turtles",
    "notification-macros",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.71"
colored = "2.0.0"
futures-util = "0.3.28"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-tungstenite = "0.19.0"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
turtle-sender-queue = { path = "turtle-sender-queue" }
turtle-tcp = { path = "turtle-tcp" }
