[package]
name = "performance-turtles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-server = "2.3.0"
actix-service = "2.0.2"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
