[package]
name = "performance-turtles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-server = "2.3.0"
actix-service = "2.0.2"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
futures-util = "0.3.28"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "env-filter"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio", "sqlite"] }
turtle-sender-queue = { path = "../turtle-sender-queue" }
turtle-tcp = { path = "../turtle-tcp" }
anyhow = "1.0.75"
