[package]
name = "queued_sender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = { version = "0.3.28", features = ["futures-sink", "sink"] }
thiserror = "1.0.41"

[dev-dependencies]
tokio = { version = "1.29.1", features = ["full"] }
